--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -30,7 +30,7 @@
 			</div>
 		
 			<div class="login_form">
-				<form action="/user/verify" id="login_form" method="post">
+				<form action="/user/login" id="login_form" method="post">
 					<div class="form-group">
 						<label class="t">邮　箱：</label>
                         <label for="email"></label><input id="email" value="" name="email" type="text" class="form-control x319 in"
